[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-checkpoint-elasticsearch"
version = "1.0.0"
description = "Library with an Elasticsearch implementation of LangGraph checkpoint saver."
authors = []
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
license-files = ['LICENSE']
dependencies = [
  "langgraph-checkpoint>=4.1.0,<5.0.0",
  "langgraph>=0.3.0",
  "elasticsearch>=8.0.0",
  "orjson>=3.11.5",
]

[project.urls]
Source = "https://github.com/your-org/langgraph-checkpoint-elasticsearch"

[dependency-groups]
test = [
  "pytest",
  "anyio",
  "pytest-asyncio",
  "pytest-mock",
  "langgraph-checkpoint",
  "langchain-core",
  "pytest-watcher",
]
lint = [
  "ruff",
  "codespell",
  "mypy",
]
dev = [
  {include-group = "test"},
  {include-group = "lint"},
]

[tool.uv]
default-groups = ['dev']

[tool.uv.sources]
langgraph-checkpoint = { path = "../checkpoint", editable = true }
langgraph = { path = "../langgraph", editable = true }

[tool.hatch.build.targets.wheel]
include = ["langgraph"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --durations=5 -vv"
asyncio_mode = "auto"

[tool.ruff]
lint.select = [
  "E",
  "F",
  "UP",
  "B",
  "I",
]
lint.ignore = ["E501", "B008"]
target-version = "py310"

[tool.mypy]
disallow_untyped_defs = "True"
explicit_package_bases = "True"
warn_no_return = "False"
warn_unused_ignores = "True"
warn_redundant_casts = "True"
allow_redefinition = "True"
disable_error_code = "typeddict-item, return-value"

[tool.pytest-watcher]
now = true
delay = 0.1
runner_args = ["--ff", "-x", "-v", "--tb", "short"]
patterns = ["*.py"]